--- a/hyprland-desktop/.config/hypr/hyprland.conf
+++ b/hyprland-desktop/.config/hypr/hyprland.conf
@@ -16,7 +16,7 @@ monitor= DP-3, 3440x1440@165, 0x0, 1
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
 # Execute your favorite apps at launch
-# exec-once = waybar & hyprpaper & firefox
+ exec-once = hyprpaper
 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
@@ -122,16 +122,18 @@ bind = $mainMod, E, exec, dolphin
 bind = $mainMod, V, togglefloating, 
 bind = $mainMod, R, exec, wofi --show drun
 bind = $mainMod, P, pseudo, # dwindle
-bind = $mainMod, J, togglesplit, # dwindle
+bind = $mainMod, S, togglesplit, # dwindle
 
 # Move focus with mainMod + arrow keys
-bind = $mainMod, left, movefocus, l
-bind = $mainMod, right, movefocus, r
-bind = $mainMod, up, movefocus, u
-bind = $mainMod, down, movefocus, d
+bind = $mainMod, H, movefocus, l
+bind = $mainMod, L, movefocus, r
+bind = $mainMod, K, movefocus, u
+bind = $mainMod, J, movefocus, d
 
+$w1 = hyprctl hyprpaper wallpaper "DP-3, ~/.config/hypr/space-wallpaper.jpg"
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
+bind = $mainMod, 1, exec, $w1
 bind = $mainMod, 2, workspace, 2
 bind = $mainMod, 3, workspace, 3
 bind = $mainMod, 4, workspace, 4
@@ -161,3 +163,5 @@ bind = $mainMod, mouse_up, workspace, e-1
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
+
+#wallpaper = DP-3, ~/.config/hypr/space-wallpaper.jpg
