--- a/hyprland-desktop/.config/hypr/hyprland.conf
+++ b/hyprland-desktop/.config/hypr/hyprland.conf
@@ -1,6 +1,7 @@
 monitor= DP-3, 3440x1440@165, 0x0, 1 # monitor declaration
 
 exec-once = hyprpaper # launch apps on startup
+exec-once = /usr/lib/polkit-kde-authentication-agent-1
 
 input { # mouse and keyboard configuration
     kb_layout = us
