back to old stable for laptop

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -1,4 +1,4 @@
-monitor= DP-3, 3440x1440@165, 0x0, 1 # monitor declaration
+monitor= eDP-1, 1920x1080@60, 0x0, 1.25 # monitor declaration
 
 exec-once = hyprpaper # launch apps on startup
 exec-once = waybar
@@ -9,6 +9,10 @@ input { # mouse and keyboard configuration
     kb_variant = intl
     follow_mouse = 1
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
+    
+    touchpad {
+      natural_scroll = yes
+    }
 }
 
 general { # general window configuration
