--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -1,21 +1,38 @@
-monitor= eDP-1, 1920x1080@60, 0x0, 1.25 # monitor declaration
+#############################
+# Monitor configuration
+#############################
 
-exec-once = hyprpaper # launch apps on startup
-exec-once = waybar
-exec-once = /usr/lib/polkit-kde-authentication-agent-1
+# main monitor declaration
+monitor= eDP-1, 1920x1080@60, 0x0, 1.25
 
-input { # mouse and keyboard configuration
+#############################
+# Execute on startup
+#############################
+
+exec-once = hyprpaper # wallpaper
+exec-once = waybar # top status bar
+
+#############################
+# Input Settings / Devices
+#############################
+
+# mouse/touchpad and keyboard configuration
+input {
     kb_layout = us
     kb_variant = intl
-    follow_mouse = 1
+
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
-    
     touchpad {
       natural_scroll = yes
     }
 }
 
-general { # general window configuration
+#############################
+# Appearance / Animations
+#############################
+
+# general window configuration
+general {
     gaps_in = 5
     gaps_out = 20
     border_size = 2
@@ -24,7 +41,8 @@ general { # general window configuration
     layout = dwindle
 }
 
-decoration { # appearance
+# appearance settings
+decoration {
     rounding = 10
     blur = yes
     blur_size = 3
@@ -37,7 +55,8 @@ decoration { # appearance
     col.shadow = rgba(1a1a1aee)
 }
 
-animations { # animations configuration
+# animations configuration
+animations {
     enabled = yes
     bezier = myBezier, 0.05, 0.9, 0.1, 1.05
     animation = windows, 1, 7, myBezier
@@ -48,20 +67,29 @@ animations { # animations configuration
     animation = workspaces, 1, 6, default
 }
 
+#############################
+# Behavior
+#############################
+
+# pseudotiling
 dwindle {
-    pseudotile = yes # master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
+    pseudotile = yes # master switch for pseudotiling. Enabling is bound to mainMod + P
     preserve_split = yes # you probably want this
 }
 
+# focus to new window
 master {
     new_is_master = true
 }
-device:epic mouse V1 {
-    sensitivity = -0.5
-}
 
+#############################
+# Keybinds
+#############################
+
+# mod key declaration
 $mainMod = SUPER
 
+# window keybinds
 bindr = $mainMod, SUPER_L, exec, pkill rofi || rofi -show run #app launcher
 bind = $mainMod, Q, exec, alacritty
 bind = SUPER_SHIFT, Q, exec, firefox
@@ -69,15 +97,16 @@ bind = $mainMod, C, killactive,
 bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, dolphin
 bind = $mainMod, V, togglefloating, 
-bind = $mainMod, R, exec, wofi --show drun
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, S, togglesplit, # dwindle
 
+# windows navigation keybinds
 bind = $mainMod, H, movefocus, l
 bind = $mainMod, L, movefocus, r
 bind = $mainMod, K, movefocus, u
 bind = $mainMod, J, movefocus, d
 
+# workspaces keybinds
 bind = $mainMod, 1, workspace, 1
 bind = $mainMod, 2, workspace, 2
 bind = $mainMod, 3, workspace, 3
@@ -100,6 +129,7 @@ bind = $mainMod SHIFT, 8, movetoworkspace, 8
 bind = $mainMod SHIFT, 9, movetoworkspace, 9
 bind = $mainMod SHIFT, 0, movetoworkspace, 10
 
+# mouse keybinds
 bind = $mainMod, mouse_down, workspace, e+1
 bind = $mainMod, mouse_up, workspace, e-1
 
