--- a/hyprland/.config/hypr/hyprpaper.conf
+++ b/hyprland/.config/hypr/hyprpaper.conf
@@ -1,3 +1,3 @@
-preload = /home/raphaelw/.config/hypr/space-wallpaper.jpg
-wallpaper = eDP-1,/home/raphaelw/.config/hypr/space-wallpaper.jpg
+preload = ~/.dotfiles/wallpapers/space-wallpaper.jpg
+wallpaper = eDP-1, ~/.dotfiles/wallpapers/space-wallpaper.jpg
 ipc = off
