--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -33,9 +33,9 @@ input {
 
 # general window configuration
 general {
-    gaps_in = 2
-    gaps_out = 3
-    border_size = 2
+    gaps_in = 1
+    gaps_out = 2
+    border_size = 1
     col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
     col.inactive_border = rgba(595959aa)
     layout = dwindle
@@ -43,8 +43,8 @@ general {
 
 # appearance settings
 decoration {
-    rounding = 5
-    blur = yes
+    rounding = 0
+    blur = no
     blur_size = 3
     blur_passes = 1
     blur_new_optimizations = on
