--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -95,7 +95,7 @@ bind = $mainMod, Q, exec, alacritty
 bind = SUPER_SHIFT, Q, exec, firefox
 bind = $mainMod, C, killactive,
 bind = $mainMod, M, exit,
-bind = $mainMod, E, exec, dolphin
+bind = $mainMod, E, exec, thunar
 bind = $mainMod, V, togglefloating, 
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, S, togglesplit, # dwindle
