--- a/mpd/.config/mpd/mpd.conf
+++ b/mpd/.config/mpd/mpd.conf
@@ -215,7 +215,7 @@ input {
 #
 # An example of an ALSA output:
 #
-#audio_output {
+audio_output {
 	type		"pipewire"
 	name		"Pipewire Sound Server"
 ##	device		"hw:0,0"	# optional
@@ -223,7 +223,7 @@ input {
 ##	mixer_device	"default"	# optional
 ##	mixer_control	"PCM"		# optional
 ##	mixer_index	"0"		# optional
-#}
+}
 #
 # An example of an OSS output:
 #
