--- a/waybar/.config/waybar/config
+++ b/waybar/.config/waybar/config
@@ -23,6 +23,7 @@
     "on-click": "activate",
     "on-scroll-up": "hyprctl dispatch workspace e+1",
     "on-scroll-down": "hyprctl dispatch workspace e-1",
+    "active-only": false,
     "sort-by-number": true
   },
   "keyboard-state": {
