--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -3,7 +3,7 @@
 #############################
 
 # main monitor declaration
-monitor= DP-3, 3440x1440@165, 0x0, 1
+monitor= eDP-1, 1920x1080@60, 0x0, 1.25
 
 #############################
 # Execute on startup
