--- a/hyprland/.config/hypr/hyprpaper.conf
+++ b/hyprland/.config/hypr/hyprpaper.conf
@@ -1,3 +1,3 @@
 preload = ~/.dotfiles/wallpapers/space-wallpaper.jpg
-wallpaper = DP-3, ~/.dotfiles/wallpapers/space-wallpaper.jpg
+wallpaper = eDP-1, ~/.dotfiles/wallpapers/space-wallpaper.jpg
 ipc = off
