final fix for worksspaces with waybar

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -164,7 +164,6 @@ windowrule=workspace 9,title:^(PERSISTENT_WORKSPACE_9)$
 windowrule=workspace 10,title:^(PERSISTENT_WORKSPACE_10)$
 
 # Exec commands to keep each workspace persistent 
-exec-once=alacritty -t PERSISTENT_WORKSPACE_1 & 
 exec-once=alacritty -t PERSISTENT_WORKSPACE_2 & 
 exec-once=alacritty -t PERSISTENT_WORKSPACE_3 & 
 exec-once=alacritty -t PERSISTENT_WORKSPACE_4 & 
@@ -174,3 +173,4 @@ exec-once=alacritty -t PERSISTENT_WORKSPACE_7 &
 exec-once=alacritty -t PERSISTENT_WORKSPACE_8 &
 exec-once=alacritty -t PERSISTENT_WORKSPACE_9 &
 exec-once=alacritty -t PERSISTENT_WORKSPACE_10 &
+exec-once=alacritty -t PERSISTENT_WORKSPACE_1 & # workspace 1 is last to ensure is is the one active once startup is over
