--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -5,6 +5,9 @@
 # main monitor declaration
 monitor= eDP-1, 1920x1080@60, 0x0, 1.25
 
+# default workspace declaration
+workspace= eDP-1, 1
+
 #############################
 # Execute on startup
 #############################
@@ -143,34 +146,34 @@ bindm = $mainMod, mouse:273, resizewindow
 # /!\ this is a dirty temporary solution found on github : https://github.com/Alexays/Waybar/issues/1629
 # support for persistent workspaces on waybar for wlr has not been yet implemented, this if for now the workaround
 
-# Global persistent workspace rules 
-windowrule=float,title:^PERSISTENT_WORKSPACE.*$
-windowrule=nofocus,title:^PERSISTENT_WORKSPACE.*$
-windowrule=noblur,title:^PERSISTENT_WORKSPACE.*$
-windowrule=size 0 0,title:^PERSISTENT_WORKSPACE.*$
-windowrule=move 0 0,title:^PERSISTENT_WORKSPACE.*$
-windowrule=opacity 0,title:^PERSISTENT_WORKSPACE.*$
-
-# Individual persistent workspace rules
-windowrule=workspace 1,title:^(PERSISTENT_WORKSPACE_1)$
-windowrule=workspace 2,title:^(PERSISTENT_WORKSPACE_2)$
-windowrule=workspace 3,title:^(PERSISTENT_WORKSPACE_3)$
-windowrule=workspace 4,title:^(PERSISTENT_WORKSPACE_4)$
-windowrule=workspace 5,title:^(PERSISTENT_WORKSPACE_5)$
-windowrule=workspace 6,title:^(PERSISTENT_WORKSPACE_6)$
-windowrule=workspace 7,title:^(PERSISTENT_WORKSPACE_7)$
-windowrule=workspace 8,title:^(PERSISTENT_WORKSPACE_8)$
-windowrule=workspace 9,title:^(PERSISTENT_WORKSPACE_9)$
-windowrule=workspace 10,title:^(PERSISTENT_WORKSPACE_10)$
-
-# Exec commands to keep each workspace persistent 
-exec-once=alacritty -t PERSISTENT_WORKSPACE_2 & 
-exec-once=alacritty -t PERSISTENT_WORKSPACE_3 & 
-exec-once=alacritty -t PERSISTENT_WORKSPACE_4 & 
-exec-once=alacritty -t PERSISTENT_WORKSPACE_5 &
-exec-once=alacritty -t PERSISTENT_WORKSPACE_6 &
-exec-once=alacritty -t PERSISTENT_WORKSPACE_7 &
-exec-once=alacritty -t PERSISTENT_WORKSPACE_8 &
-exec-once=alacritty -t PERSISTENT_WORKSPACE_9 &
-exec-once=alacritty -t PERSISTENT_WORKSPACE_10 &
-exec-once=alacritty -t PERSISTENT_WORKSPACE_1 & # workspace 1 is last to ensure is is the one active once startup is over
+# # Global persistent workspace rules 
+# windowrule=float,title:^PERSISTENT_WORKSPACE.*$
+# windowrule=nofocus,title:^PERSISTENT_WORKSPACE.*$
+# windowrule=noblur,title:^PERSISTENT_WORKSPACE.*$
+# windowrule=size 0 0,title:^PERSISTENT_WORKSPACE.*$
+# windowrule=move 0 0,title:^PERSISTENT_WORKSPACE.*$
+# windowrule=opacity 0,title:^PERSISTENT_WORKSPACE.*$
+#
+# # Individual persistent workspace rules
+# windowrule=workspace 1,title:^(PERSISTENT_WORKSPACE_1)$
+# windowrule=workspace 2,title:^(PERSISTENT_WORKSPACE_2)$
+# windowrule=workspace 3,title:^(PERSISTENT_WORKSPACE_3)$
+# windowrule=workspace 4,title:^(PERSISTENT_WORKSPACE_4)$
+# windowrule=workspace 5,title:^(PERSISTENT_WORKSPACE_5)$
+# windowrule=workspace 6,title:^(PERSISTENT_WORKSPACE_6)$
+# windowrule=workspace 7,title:^(PERSISTENT_WORKSPACE_7)$
+# windowrule=workspace 8,title:^(PERSISTENT_WORKSPACE_8)$
+# windowrule=workspace 9,title:^(PERSISTENT_WORKSPACE_9)$
+# windowrule=workspace 10,title:^(PERSISTENT_WORKSPACE_10)$
+#
+# # Exec commands to keep each workspace persistent 
+# exec-once=alacritty -t PERSISTENT_WORKSPACE_1 &
+# exec-once=alacritty -t PERSISTENT_WORKSPACE_2 & 
+# exec-once=alacritty -t PERSISTENT_WORKSPACE_3 & 
+# exec-once=alacritty -t PERSISTENT_WORKSPACE_4 & 
+# exec-once=alacritty -t PERSISTENT_WORKSPACE_5 &
+# exec-once=alacritty -t PERSISTENT_WORKSPACE_6 &
+# exec-once=alacritty -t PERSISTENT_WORKSPACE_7 &
+# exec-once=alacritty -t PERSISTENT_WORKSPACE_8 &
+# exec-once=alacritty -t PERSISTENT_WORKSPACE_9 &
+# exec-once=alacritty -t PERSISTENT_WORKSPACE_10 &
