--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -95,7 +95,7 @@ $mainMod = SUPER
 # window keybinds
 bindr = $mainMod, SUPER_L, exec, pkill rofi || rofi -show run #app launcher
 bind = $mainMod, Q, exec, alacritty
-bind = SUPER_SHIFT, Q, exec, firefox
+bind = $mainMod, W, exec, firefox
 bind = $mainMod, C, killactive,
 bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, thunar
