waybar reload shorcut : SUPER + B

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -92,10 +92,11 @@ master {
 # mod key declaration
 $mainMod = SUPER
 
-# window keybinds
+# window keybinds, applications or commands shortcuts
 bindr = $mainMod, SUPER_L, exec, pkill rofi || rofi -show run #app launcher
 bind = $mainMod, Q, exec, alacritty
 bind = $mainMod, W, exec, firefox
+bind = $mainMod, B, exec, killall -SIGUSR2 waybar # reload waybar config
 bind = $mainMod, C, killactive,
 bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, thunar
