--- a/waybar/.config/waybar/config.jsonc
+++ b/waybar/.config/waybar/config.jsonc
@@ -8,7 +8,6 @@
   "modules-center": ["clock"],
   "modules-right": [
     "mpd",
-    "idle_inhibitor",
     "pulseaudio",
     "network",
     "cpu",
@@ -88,17 +87,15 @@
     "format-alt": "{:%Y-%m-%d}"
   },
   "cpu": {
-    "format": "{usage}% ",
-    "tooltip": false
+    "interval": 1,
+    "format": "{usage:2}% "
   },
   "memory": {
-    "format": "{}% "
+    "interval": 1,
+    "format": "{used:5}GiB "
   },
   "temperature": {
-    // "thermal-zone": 2,
-    // "hwmon-path": "/sys/class/hwmon/hwmon2/temp1_input",
     "critical-threshold": 80,
-    // "format-critical": "{temperatureC}°C {icon}",
     "format": "{temperatureC}°C {icon}",
     "format-icons": ["", "", ""]
   },
