up to speed with laptop

--- a/waybar/.config/waybar/config.jsonc
+++ b/waybar/.config/waybar/config.jsonc
@@ -13,8 +13,7 @@
     "cpu",
     "memory",
     "temperature",
-    "keyboard-state",
-    "tray"
+    "keyboard-state"
   ],
   // Modules configuration
   "wlr/workspaces": {
