--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -93,7 +93,7 @@ $mainMod = SUPER
 bindr = $mainMod, SUPER_L, exec, pkill rofi || rofi -show run #app launcher
 bind = $mainMod, Q, exec, alacritty
 bind = $mainMod, W, exec, firefox
-bind = $mainMod, B, exec, killall -SIGUSR2 waybar # reload waybar
+bind = $mainMod, B, exec, pkill waybar && waybar # reload waybar
 bind = $mainMod, C, killactive,
 bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, thunar
