--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -95,7 +95,7 @@ bind = $mainMod, Q, exec, alacritty
 bind = $mainMod, W, exec, firefox
 bind = $mainMod, B, exec, pkill waybar && waybar # reload waybar
 bind = $mainMod, C, killactive,
-bind = $mainMod, M, exit,
+bind = SUPER_SHIFT, M, exit,
 bind = $mainMod, E, exec, thunar
 bind = $mainMod, V, togglefloating, 
 bind = $mainMod, P, pseudo, # dwindle
