--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -14,6 +14,7 @@ workspace = eDP-1, 1
 
 exec-once = hyprpaper # wallpaper
 exec-once = waybar # top status bar
+exec-once = dunst # notification-daemon
 
 #############################
 # Input Settings / Devices
