replaced waybar with eww widgets'

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -13,7 +13,7 @@ workspace = eDP-1, 1
 #############################
 
 exec-once = hyprpaper # wallpaper
-exec-once = waybar # top status bar
+exec-once = eww open bar # top status bar
 exec-once = dunst # notification-daemon
 
 #############################
@@ -97,7 +97,6 @@ $mainMod = SUPER
 bindr = $mainMod, SUPER_L, exec, pkill rofi || rofi -show run #app launcher
 bind = $mainMod, Q, exec, alacritty
 bind = $mainMod, W, exec, firefox
-bind = $mainMod, B, exec, pkill waybar && waybar # reload waybar config
 bind = $mainMod, C, killactive,
 bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, thunar
