--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -27,8 +27,12 @@ input {
 
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
     touchpad {
-      natural_scroll = yes
+      natural_scroll = true
     }
+}
+gestures {
+  workspace_swipe = true 
+  workspace_swipe_fingers = 3
 }
 
 #############################
@@ -48,12 +52,12 @@ general {
 # appearance settings
 decoration {
     rounding = 0
-    blur = no
+    blur = false
     blur_size = 3
     blur_passes = 1
-    blur_new_optimizations = on
+    blur_new_optimizations = false
 
-    drop_shadow = yes
+    drop_shadow = true
     shadow_range = 4
     shadow_render_power = 3
     col.shadow = rgba(1a1a1aee)
@@ -61,7 +65,7 @@ decoration {
 
 # animations configuration
 animations {
-    enabled = yes
+    enabled = true
     bezier = myBezier, 0.05, 0.9, 0.1, 1.05
     animation = windows, 1, 7, myBezier
     animation = windowsOut, 1, 7, default, popin 80%
@@ -77,8 +81,8 @@ animations {
 
 # pseudotiling
 dwindle {
-    pseudotile = yes # master switch for pseudotiling. Enabling is bound to mainMod + P
-    preserve_split = yes # you probably want this
+    pseudotile = true # master switch for pseudotiling. Enabling is bound to mainMod + P
+    preserve_split = true # you probably want this
 }
 
 # focus to new window
