--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -104,6 +104,10 @@ bind = $mainMod, V, togglefloating,
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, S, togglesplit, # dwindle
 
+# special keys keybinds
+bind = , XF86MonBrightnessDown, exec, backlight_control -5
+bind = , XF86MonBrightnessUp, exec, backlight_control +5
+
 # windows navigation keybinds
 bind = $mainMod, H, movefocus, l
 bind = $mainMod, L, movefocus, r
