added autostart for kde-authentication-agent

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -15,6 +15,7 @@ workspace = eDP-1, 1
 exec-once = hyprpaper # wallpaper
 exec-once = eww open bar # top status bar
 exec-once = dunst # notification-daemon
+exec-once = /usr/lib/polkit-kde-authentication-agent-1 # authentication agent
 
 #############################
 # Input Settings / Devices
