auto startup for applications on the correct workspaces, window rules

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -17,6 +17,12 @@ exec-once = eww open bar # top status bar
 exec-once = dunst # notification-daemon
 exec-once = /usr/lib/polkit-kde-authentication-agent-1 # authentication agent
 
+exec-once = [workspace 1] firefox #workspace 1
+exec-once = [workspace 2] alacritty #workspace 2
+exec-once = [workspace 3] firefox && alacritty #workspace 3
+exec-once = thunderbird #workspace 4 - email client
+exec-once = keepassxc #workspace 5 - password manager
+
 #############################
 # Input Settings / Devices
 #############################
@@ -144,3 +150,10 @@ bind = $mainMod, mouse_up, workspace, e-1
 
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
+
+#############################
+# Window Rules
+#############################
+
+windowrule = workspace 4 silent, ^(thunderbird)$
+windowrule = workspace 5 silent, (KeePassXC)$
