auto startup is bugged

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -18,8 +18,9 @@ exec-once = dunst # notification-daemon
 exec-once = /usr/lib/polkit-kde-authentication-agent-1 # authentication agent
 
 exec-once = [workspace 1] firefox #workspace 1
-exec-once = [workspace 2] alacritty #workspace 2
-exec-once = [workspace 3] firefox && alacritty #workspace 3
+exec-once = [workspace 2 silent] alacritty #workspace 2
+exec-once = [workspace 3 silent] firefox #workspace 3
+exec-once = [workspace 3 silent] alacritty #workspace 3
 exec-once = thunderbird #workspace 4 - email client
 exec-once = keepassxc #workspace 5 - password manager
 
