basic auto start config + monitor brightness keybinds (bus 8)

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -11,6 +11,15 @@ monitor= DP-3, 3440x1440@165, 0x0, 1
 
 exec-once = hyprpaper # wallpaper
 exec-once = waybar # top status bar
+exec-once = dunst # notification-daemon
+exec-once = /usr/lib/polkit-kde-authentication-agent-1 # authentication agent
+
+exec-once = [workspace 1] firefox #workspace 1
+exec-once = [workspace 2 silent] alacritty #workspace 2
+exec-once = [workspace 3 silent] firefox #workspace 3
+exec-once = [workspace 3 silent] alacritty #workspace 3
+exec-once = thunderbird #workspace 4 - email client
+exec-once = keepassxc #workspace 5 - password manager
 
 #############################
 # Input Settings / Devices
@@ -101,6 +110,10 @@ bind = $mainMod, V, togglefloating,
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, S, togglesplit, # dwindle
 
+# special keys keybinds
+bind = , XF86MonBrightnessDown, exec, ddcutil --bus 8 setvcp 10 - 10
+bind = , XF86MonBrightnessUp, exec, ddcutil --bus 8 setvcp 10 + 10
+
 # windows navigation keybinds
 bind = $mainMod, H, movefocus, l
 bind = $mainMod, L, movefocus, r
@@ -136,3 +149,10 @@ bind = $mainMod, mouse_up, workspace, e-1
 
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
+
+#############################
+# Window Rules
+#############################
+
+windowrule = workspace 4 silent, ^(thunderbird)$
+windowrule = workspace 5 silent, (KeePassXC)$
