--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -16,7 +16,7 @@ exec-once = /usr/lib/polkit-kde-authentication-agent-1 # authentication agent
 
 exec-once = [workspace 1] firefox #workspace 1
 exec-once = [workspace 2 silent] alacritty #workspace 2
-exec-once = [workspace 3 silent] firefox #workspace 3
+exec-once = [workspace 3 silent] firefox --new-instance #workspace 3
 exec-once = [workspace 3 silent] alacritty #workspace 3
 exec-once = thunderbird #workspace 4 - email client
 exec-once = keepassxc #workspace 5 - password manager
@@ -111,8 +111,14 @@ bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, S, togglesplit, # dwindle
 
 # special keys keybinds
-bind = , XF86MonBrightnessDown, exec, ddcutil --bus 8 setvcp 10 - 10
-bind = , XF86MonBrightnessUp, exec, ddcutil --bus 8 setvcp 10 + 10
+binde = , XF86MonBrightnessDown, exec, ddcutil --bus 8 setvcp 10 - 10
+binde = , XF86MonBrightnessUp, exec, ddcutil --bus 8 setvcp 10 + 10
+binde = , XF86AudioLowerVolume, exec, pactl set-sink-volume @DEFAULT_SINK@ -5%
+binde = , XF86AudioRaiseVolume, exec, pactl set-sink-volume @DEFAULT_SINK@ +5%
+bind = , XF86AudioMute, exec, pactl set-sink-mute @DEFAULT_SINK@ toggle
+bind = , XF86AudioPlay, exec, playerctl play-pause
+bind = , XF86AudioPrev, exec, playerctl next
+bind = , XF86AudioNext, exec, playerctl previous
 
 # windows navigation keybinds
 bind = $mainMod, H, movefocus, l
