--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -17,9 +17,9 @@ exec-once = eww open bar # top status bar
 exec-once = dunst # notification-daemon
 exec-once = /usr/lib/polkit-kde-authentication-agent-1 # authentication agent
 
-exec-once = [workspace 1] firefox #workspace 1
+exec-once = [workspace 1] firefox -P general #workspace 1
 exec-once = [workspace 2 silent] alacritty #workspace 2
-exec-once = [workspace 3 silent] firefox #workspace 3
+exec-once = [workspace 3 silent] firefox -P special #workspace 3
 exec-once = [workspace 3 silent] alacritty #workspace 3
 exec-once = thunderbird #workspace 4 - email client
 exec-once = keepassxc #workspace 5 - password manager
@@ -106,7 +106,7 @@ bindr = $mainMod, SUPER_L, exec, pkill rofi || rofi -show run #app launcher
 bind = $mainMod, Q, exec, alacritty
 bind = $mainMod, W, exec, firefox
 bind = $mainMod, C, killactive,
-bind = $mainMod, M, exit,
+bind = SUPER_SHIFT, M, exit,
 bind = $mainMod, E, exec, thunar
 bind = $mainMod, V, togglefloating, 
 bind = $mainMod, P, pseudo, # dwindle
