startup working with firefox-developer-edition

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -14,12 +14,12 @@ exec-once = waybar # top status bar
 exec-once = dunst # notification-daemon
 exec-once = /usr/lib/polkit-kde-authentication-agent-1 # authentication agent
 
-exec-once = [workspace 1] firefox #workspace 1
-exec-once = [workspace 2 silent] alacritty #workspace 2
-exec-once = [workspace 3 silent] firefox --new-instance #workspace 3
-exec-once = [workspace 3 silent] alacritty #workspace 3
-exec-once = thunderbird #workspace 4 - email client
-exec-once = keepassxc #workspace 5 - password manager
+exec-once = [workspace 1 silent] firefox
+exec-once = [workspace 2 silent] alacritty
+exec-once = [workspace 3 silent] firefox-developer-edition
+exec-once = [workspace 3 silent] alacritty
+exec-once = [workspace 4 silent] thunderbird
+exec-once = [workspace 4 silent] keepassxc 
 
 #############################
 # Input Settings / Devices
@@ -155,10 +155,3 @@ bind = $mainMod, mouse_up, workspace, e-1
 
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
-
-#############################
-# Window Rules
-#############################
-
-windowrule = workspace 4 silent, ^(thunderbird)$
-windowrule = workspace 5 silent, (KeePassXC)$
