--- a/alacritty/.config/alacritty/alacritty.yml
+++ b/alacritty/.config/alacritty/alacritty.yml
@@ -1,25 +1,30 @@
 colors:
-  bright:
-    black: "0x555753"
-    blue: "0x729fcf"
-    cyan: "0x34e2e2"
-    green: "0x8ae234"
-    magenta: "0xad7fa8"
-    red: "0xef2929"
-    white: "0xeeeeec"
-    yellow: "0xfce94f"
-  normal:
-    black: "0x2e3436"
-    blue: "0x3465a4"
-    cyan: "0x06989a"
-    green: "0x4e9a06"
-    magenta: "0x75507b"
-    red: "0xcc0000"
-    white: "0xd3d7cf"
-    yellow: "0xc4a000"
+  # Default colors
   primary:
-    background: "0x000000"
-    foreground: "0xd3d7cf"
+    background: "0x24283b"
+    foreground: "0xc0caf5"
+
+  # Normal colors
+  normal:
+    black: "0x1d202f"
+    red: "0xf7768e"
+    green: "0x9ece6a"
+    yellow: "0xe0af68"
+    blue: "0x4d46db"
+    magenta: "0xbb9af7"
+    cyan: "0x7dcfff"
+    white: "0xa9b1d6"
+
+  # Bright colors
+  bright:
+    black: "0x414868"
+    red: "0xf7768e"
+    green: "0x9ece6a"
+    yellow: "0xe0af68"
+    blue: "0x7aa2f7"
+    magenta: "0xbb9af7"
+    cyan: "0x7dcfff"
+    white: "0xc0caf5"
 cursor:
   style:
     blinking: Off
@@ -43,4 +48,4 @@ window:
   padding:
     x: 10
     y: 10
-  opacity: 0.5
+  opacity: 1
