--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -10,7 +10,7 @@ monitor= DP-3, 3440x1440@165, 0x0, 1
 #############################
 
 exec-once = hyprpaper # wallpaper
-exec-once = waybar # top status bar
+exec-once = eww open bar # top status bar
 exec-once = dunst # notification-daemon
 exec-once = /usr/lib/polkit-kde-authentication-agent-1 # authentication agent
 
@@ -20,6 +20,8 @@ exec-once = [workspace 3 silent] firefox-developer-edition
 exec-once = [workspace 3 silent] alacritty
 exec-once = [workspace 4 silent] thunderbird
 exec-once = [workspace 4 silent] keepassxc 
+
+exec-once = hyprctl dispatch workspace 10
 
 #############################
 # Input Settings / Devices
@@ -42,10 +44,11 @@ input {
 
 # general window configuration
 general {
-    gaps_in = 1
-    gaps_out = 2
-    border_size = 1
-    col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
+    gaps_in = 5
+    gaps_out = 10
+    border_size = 2
+    # col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
+    col.active_border = rgb(000000)
     col.inactive_border = rgba(595959aa)
     layout = dwindle
 }
@@ -54,9 +57,6 @@ general {
 decoration {
     rounding = 0
     blur = no
-    blur_size = 3
-    blur_passes = 1
-    blur_new_optimizations = on
 
     drop_shadow = yes
     shadow_range = 4
