wallpaper and startup changes

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -6,7 +6,7 @@
 monitor = eDP-1, 1920x1080@60, 0x0, 1.25
 
 # default workspace declaration
-workspace = eDP-1, 1
+workspace = eDP-1, 10
 
 #############################
 # Execute on startup
@@ -17,12 +17,12 @@ exec-once = eww open bar # top status bar
 exec-once = dunst # notification-daemon
 exec-once = /usr/lib/polkit-kde-authentication-agent-1 # authentication agent
 
-exec-once = [workspace 1] firefox -P general #workspace 1
+exec-once = [workspace 1 silent] firefox
 exec-once = [workspace 2 silent] alacritty #workspace 2
-exec-once = [workspace 3 silent] firefox -P special #workspace 3
+exec-once = [workspace 3 silent] firefox-developer-edition #workspace 3
 exec-once = [workspace 3 silent] alacritty #workspace 3
-exec-once = thunderbird #workspace 4 - email client
-exec-once = keepassxc #workspace 5 - password manager
+exec-once = [workspace 4] thunderbird #workspace 4 - email client
+exec-once = [workspace 5] keepassxc #workspace 5 - password manager
 
 #############################
 # Input Settings / Devices
@@ -151,10 +151,3 @@ bind = $mainMod, mouse_up, workspace, e-1
 
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
-
-#############################
-# Window Rules
-#############################
-
-windowrule = workspace 4 silent, ^(thunderbird)$
-windowrule = workspace 5 silent, (KeePassXC)$
