--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -21,8 +21,8 @@ exec-once = [workspace 1 silent] firefox
 exec-once = [workspace 2 silent] alacritty #workspace 2
 exec-once = [workspace 3 silent] firefox-developer-edition #workspace 3
 exec-once = [workspace 3 silent] alacritty #workspace 3
-exec-once = [workspace 4] thunderbird #workspace 4 - email client
-exec-once = [workspace 5] keepassxc #workspace 5 - password manager
+exec-once = [workspace 4 silent] thunderbird #workspace 4 - email client
+exec-once = [workspace 5 silent] keepassxc #workspace 5 - password manager
 
 #############################
 # Input Settings / Devices
