--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -45,10 +45,10 @@ input {
 
 # general window configuration
 general {
-    gaps_in = 1
-    gaps_out = 2
-    border_size = 1
-    col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
+    gaps_in = 5
+    gaps_out = 10
+    border_size = 2
+    col.active_border = rgb(000000)
     col.inactive_border = rgba(595959aa)
     layout = dwindle
 }
