default workspace is now dispatched on launch

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -5,9 +5,6 @@
 # main monitor declaration
 monitor = eDP-1, 1920x1080@60, 0x0, 1.25
 
-# default workspace declaration
-workspace = eDP-1, 10
-
 #############################
 # Execute on startup
 #############################
@@ -23,6 +20,8 @@ exec-once = [workspace 3 silent] firefox-developer-edition #workspace 3
 exec-once = [workspace 3 silent] alacritty #workspace 3
 exec-once = [workspace 4 silent] thunderbird #workspace 4 - email client
 exec-once = [workspace 5 silent] keepassxc #workspace 5 - password manager
+
+exec-once = hyprctl dispatch workspace 10
 
 #############################
 # Input Settings / Devices
