--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -56,14 +56,10 @@ general {
 decoration {
     rounding = 0
     blur = false
-    blur_size = 3
-    blur_passes = 1
-    blur_new_optimizations = false
-
-    drop_shadow = true
-    shadow_range = 4
-    shadow_render_power = 3
-    col.shadow = rgba(1a1a1aee)
+    drop_shadow = false
+}
+misc {
+  vfr = true #battery optimisation
 }
 
 # animations configuration
