spotify support finally

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -102,6 +102,7 @@ $mainMod = SUPER
 bindr = $mainMod, SUPER_L, exec, pkill rofi || rofi -show run #app launcher
 bind = $mainMod, Q, exec, alacritty
 bind = $mainMod, W, exec, firefox
+bind = $mainMod, M, exec, LD_PRELOAD=/usr/lib/spotifywm.so /usr/share/spotify/spotify-launcher
 bind = $mainMod, B, exec, pkill waybar && waybar # reload waybar
 bind = $mainMod, C, killactive,
 bind = SUPER_SHIFT, M, exit,
@@ -155,3 +156,9 @@ bind = $mainMod, mouse_up, workspace, e-1
 
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
+
+#############################
+# Window Rules
+#############################
+
+windowrulev2 = tile, class:^(Spotify)$ #make spotify work with tiling window managers - spotifywm is required
