--- a/main/hyprland/.config/hypr/hyprland.conf
+++ b/main/hyprland/.config/hypr/hyprland.conf
@@ -1,42 +1,8 @@
 #############################
-# Monitor configuration
+# source host
 #############################
 
-# main monitor declaration
-monitor= DP-3, 3440x1440@165, 0x0, 1
-
-#############################
-# Execute on startup
-#############################
-
-exec-once = hyprpaper # wallpaper
-exec-once = eww open bar # top status bar
-exec-once = dunst # notification-daemon
-exec-once = /usr/lib/polkit-kde-authentication-agent-1 # authentication agent
-
-exec-once = [workspace 1 silent] firefox
-exec-once = [workspace 2 silent] alacritty
-exec-once = [workspace 3 silent] firefox-developer-edition
-exec-once = [workspace 3 silent] alacritty
-exec-once = [workspace 4 silent] thunderbird
-exec-once = [workspace 4 silent] keepassxc 
-
-exec-once = hyprctl dispatch workspace 10
-
-#############################
-# Input Settings / Devices
-#############################
-
-# mouse/touchpad and keyboard configuration
-input {
-    kb_layout = us
-    kb_variant = intl
-
-    sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
-    touchpad {
-      natural_scroll = yes
-    }
-}
+source = ~/.config/hypr/hyprdesktop.conf
 
 #############################
 # Appearance / Animations
