--- a/desktop/hypr/hyprdesktop.conf
+++ b/desktop/hypr/hyprdesktop.conf
@@ -20,6 +20,7 @@ exec-once = [workspace 3 silent] firefox-developer-edition
 exec-once = [workspace 3 silent] alacritty
 exec-once = [workspace 4 silent] thunderbird
 exec-once = [workspace 4 silent] keepassxc 
+exec-once = [workspace 5 silent] spotify
 
 exec-once = hyprctl dispatch workspace 10
 
