--- a/desktop/hypr/hyprdesktop.conf
+++ b/desktop/hypr/hyprdesktop.conf
@@ -20,7 +20,7 @@ exec-once = [workspace 3 silent] firefox-developer-edition
 exec-once = [workspace 3 silent] alacritty
 exec-once = [workspace 4 silent] thunderbird
 exec-once = [workspace 4 silent] keepassxc 
-exec-once = [workspace 5 silent] spotify
+exec-once = spotify
 
 exec-once = hyprctl dispatch workspace 10
 
@@ -38,3 +38,9 @@ input {
       natural_scroll = yes
     }
 }
+
+#############################
+# Window rules
+#############################
+
+windowrulev2 = workspace 5 silent, class:^(Spotify)$ # force spotify to the workspace 5
