launch alacritty directly with nvim on workspace 2

--- a/desktop/hypr/hyprdesktop.conf
+++ b/desktop/hypr/hyprdesktop.conf
@@ -15,7 +15,7 @@ exec-once = dunst # notification-daemon
 exec-once = /usr/lib/polkit-kde-authentication-agent-1 # authentication agent
 
 exec-once = [workspace 1 silent] firefox
-exec-once = [workspace 2 silent] alacritty
+exec-once = [workspace 2 silent] alacritty -e nvim
 exec-once = [workspace 3 silent] firefox-developer-edition
 exec-once = [workspace 3 silent] alacritty
 exec-once = [workspace 4 silent] thunderbird
