--- a/desktop/hypr/hyprpaper.conf
+++ b/desktop/hypr/hyprpaper.conf
@@ -1,3 +1,3 @@
-preload = ~/.dotfiles/wallpapers/color-abstract.jpg
-wallpaper = DP-3, ~/.dotfiles/wallpapers/color-abstract.jpg
+preload = ~/dotfiles/wallpapers/color-abstract.jpg
+wallpaper = DP-3, ~/dotfiles/wallpapers/color-abstract.jpg
 ipc = off
