split and fixed eww configuration

--- a/main/hypr/hyprland.conf
+++ b/main/hypr/hyprland.conf
@@ -2,7 +2,7 @@
 # source host
 #############################
 
-source = ~/.config/hypr/hyprdesktop.conf
+source = ~/.config/hypr/hyprhost.conf
 
 #############################
 # Appearance / Animations
