fixed spotify and getvol script

--- a/desktop/hypr/hyprhost.conf
+++ b/desktop/hypr/hyprhost.conf
@@ -20,7 +20,7 @@ exec-once = [workspace 3 silent] firefox-developer-edition
 exec-once = [workspace 3 silent] alacritty
 exec-once = [workspace 4 silent] thunderbird
 exec-once = [workspace 4 silent] keepassxc 
-exec-once = spotify
+exec-once = spotify # spotify, see window rules below
 
 exec-once = hyprctl dispatch workspace 10
 
