--- a/laptop/hypr/hyprhost.conf
+++ b/laptop/hypr/hyprhost.conf
@@ -20,6 +20,7 @@ exec-once = [workspace 3 silent] firefox-developer-edition #workspace 3
 exec-once = [workspace 3 silent] alacritty #workspace 3
 exec-once = [workspace 4 silent] thunderbird #workspace 4 - email client
 exec-once = [workspace 5 silent] keepassxc #workspace 5 - password manager
+exec-once = spotify # spotify, see window rules below
 
 exec-once = hyprctl dispatch workspace 10
 
@@ -37,3 +38,9 @@ input {
       natural_scroll = true
     }
 }
+
+#############################
+# Window rules
+#############################
+
+windowrulev2 = workspace 6 silent, class:^(Spotify)$ # force spotify to the workspace 5
