addd parinfer to nvim plugins

--- a/main/hypr/hyprland.conf
+++ b/main/hypr/hyprland.conf
@@ -69,7 +69,7 @@ bindr = $mainMod, SUPER_L, exec, pkill rofi || rofi -show run #app launcher
 bind = $mainMod, Q, exec, alacritty
 bind = $mainMod, W, exec, firefox
 bind = $mainMod, M, exec, LD_PRELOAD=/usr/lib/spotifywm.so /usr/share/spotify/spotify-launcher
-bind = $mainMod, B, exec, pkill waybar && waybar # reload waybar
+bind = $mainMod, B, exec, eww close bar && eww open bar
 bind = $mainMod, C, killactive,
 bind = SUPER_SHIFT, M, exit,
 bind = $mainMod, E, exec, thunar
