starting eww daemon on login

--- a/laptop/hypr/hyprhost.conf
+++ b/laptop/hypr/hyprhost.conf
@@ -10,6 +10,7 @@ monitor = eDP-1, 1920x1080@60, 0x0, 1
 #############################
 
 exec-once = hyprpaper # wallpaper
+exec-once = eww daemon # start eww daemon
 exec-once = eww open bar # top status bar
 exec-once = dunst # notification-daemon
 exec-once = /usr/lib/polkit-kde-authentication-agent-1 # authentication agent
