changes to startup script

--- a/laptop/hypr/hyprhost.conf
+++ b/laptop/hypr/hyprhost.conf
@@ -16,7 +16,7 @@ exec-once = dunst # notification-daemon
 exec-once = /usr/lib/polkit-kde-authentication-agent-1 # authentication agent
 
 exec-once = [workspace 1 silent] firefox
-exec-once = [workspace 2 silent] alacritty #workspace 2
+exec-once = [workspace 2 silent] alacritty -e nvim #workspace 2
 exec-once = [workspace 3 silent] firefox-developer-edition #workspace 3
 exec-once = [workspace 3 silent] alacritty #workspace 3
 exec-once = [workspace 4 silent] thunderbird #workspace 4 - email client
