i am too lazy to describe all the changes I made

--- a/main/nvim/lua/.luarc.json
+++ b/main/nvim/lua/.luarc.json
@@ -2,7 +2,8 @@
     "diagnostics.globals": [
         "vim",
         "colorschemeConfig",
-        "cmpKeymaps"
+        "cmpKeymaps",
+        "isMarkdown"
     ],
     "workspace.checkThirdParty": false
 }
