--- a/main/hypr/hyprland.conf
+++ b/main/hypr/hyprland.conf
@@ -84,8 +84,8 @@ binde = , XF86AudioLowerVolume, exec, pactl set-sink-volume @DEFAULT_SINK@ -5%
 binde = , XF86AudioRaiseVolume, exec, pactl set-sink-volume @DEFAULT_SINK@ +5%
 bind = , XF86AudioMute, exec, pactl set-sink-mute @DEFAULT_SINK@ toggle
 bind = , XF86AudioPlay, exec, playerctl play-pause
-bind = , XF86AudioPrev, exec, playerctl next
-bind = , XF86AudioNext, exec, playerctl previous
+bind = , XF86AudioPrev, exec, playerctl previous
+bind = , XF86AudioNext, exec, playerctl next
 
 # windows navigation keybinds
 bind = $mainMod, H, movefocus, l
