added proper backlight controls with host specific consideration

--- a/desktop/hypr/hyprhost.conf
+++ b/desktop/hypr/hyprhost.conf
@@ -45,3 +45,10 @@ input {
 #############################
 
 windowrulev2 = workspace 5 silent, class:^(Spotify)$ # force spotify to the workspace 5
+
+#############################
+# Keybinds
+#############################
+
+binde = , XF86MonBrightnessDown, exec, ddcutil --bus 8 setvcp 10 - 10
+binde = , XF86MonBrightnessUp, exec, ddcutil --bus 8 setvcp 10 + 10
