--- a/laptop/hypr/hyprhost.conf
+++ b/laptop/hypr/hyprhost.conf
@@ -45,3 +45,10 @@ input {
 #############################
 
 windowrulev2 = workspace 6 silent, class:^(Spotify)$ # force spotify to the workspace 5
+
+#############################
+# Keybinds
+#############################
+
+binde = , XF86MonBrightnessDown, exec, backlight_control -10
+binde = , XF86MonBrightnessUp, exec, backlight_control +10
