added support for screen mirroring by default

--- a/main/hypr/hyprland.conf
+++ b/main/hypr/hyprland.conf
@@ -5,6 +5,12 @@
 source = ~/.config/hypr/hyprhost.conf
 
 #############################
+# source host
+#############################
+
+monitor=,preferred,auto,1,mirror,eDP-1
+
+#############################
 # Appearance / Animations
 #############################
 
