--- a/desktop/hypr/hyprhost.conf
+++ b/desktop/hypr/hyprhost.conf
@@ -16,7 +16,7 @@ exec-once = dunst # notification-daemon
 exec-once = /usr/lib/polkit-kde-authentication-agent-1 # authentication agent
 
 exec-once = [workspace 1 silent] firefox
-exec-once = [workspace 2 silent] alacritty -e sh -c "nvim && zsh"
+exec-once = [workspace 2 silent] alacritty
 exec-once = [workspace 3 silent] firefox-developer-edition
 exec-once = [workspace 3 silent] alacritty
 exec-once = [workspace 4 silent] thunderbird
