changed rofi launch with SUPER KEY to drun (was run)

--- a/main/hypr/hyprland.conf
+++ b/main/hypr/hyprland.conf
@@ -71,7 +71,7 @@ master {
 $mainMod = SUPER
 
 # window keybinds
-bindr = $mainMod, SUPER_L, exec, pkill rofi || rofi -show run #app launcher
+bindr = $mainMod, SUPER_L, exec, pkill rofi || rofi -show drun #app launcher
 bind = $mainMod, Q, exec, alacritty
 bind = $mainMod, W, exec, firefox
 bind = $mainMod, M, exec, LD_PRELOAD=/usr/lib/spotifywm.so /usr/share/spotify/spotify-launcher
