--- a/main/hypr/hyprland.conf
+++ b/main/hypr/hyprland.conf
@@ -72,6 +72,7 @@ $mainMod = SUPER
 
 # window keybinds
 bindr = $mainMod, SUPER_L, exec, pkill rofi || rofi -show drun #app launcher
+bind = ALT, F4, exec, pkill rofi || power.sh #powermenu
 bind = $mainMod, Q, exec, alacritty
 bind = $mainMod, W, exec, firefox
 bind = $mainMod, M, exec, LD_PRELOAD=/usr/lib/spotifywm.so /usr/share/spotify/spotify-launcher
