--- a/main/kitty/kitty.conf
+++ b/main/kitty/kitty.conf
@@ -6,4 +6,10 @@ font_size 13
 
 enable_audio_bell no
 
+cursor_shape block
+
+scrollback_lines 10000
+
+shell_integration no-cursor
+
 background #24283b
