added calculator command

--- a/main/hypr/hyprland.conf
+++ b/main/hypr/hyprland.conf
@@ -71,6 +71,7 @@ $mainMod = SUPER
 
 # window keybinds
 bindr = $mainMod, SUPER_L, exec, pkill rofi || rofi -show drun #app launcher
+bindr = $mainMod, Z, exec, pkill rofi || rofi -show calc #calculatorhypr
 bind = ALT, F4, exec, pkill rofi || power.sh #powermenu
 bind = $mainMod, Q, exec, alacritty
 bind = $mainMod, W, exec, firefox
