--- a/main/hypr/hyprland.conf
+++ b/main/hypr/hyprland.conf
@@ -5,7 +5,7 @@
 source = ~/.config/hypr/hyprhost.conf
 
 #############################
-# source host
+# general monitor configuration
 #############################
 
 monitor=,preferred,auto,1,mirror,eDP-1
