added keyboard shortcut for kitty + all default configurations options in kitty.conf

--- a/main/hypr/hyprland.conf
+++ b/main/hypr/hyprland.conf
@@ -68,17 +68,19 @@ master {
 
 # mod key declaration
 $mainMod = SUPER
+$mainModShift = SUPER_SHIFT
 
 # window keybinds
 bindr = $mainMod, SUPER_L, exec, pkill rofi || rofi -show drun #app launcher
 bind = $mainMod, Z, exec, pkill rofi || rofi -show calc #calculatorhypr
 bind = ALT, F4, exec, pkill rofi || power.sh #powermenu
-bind = $mainMod, Q, exec, alacritty
+bind = $mainMod, Q, exec, alacritty # terminal emulator (default)
+bind = $mainModShift, Q, exec, kitty # terminal emulator (secondary)
 bind = $mainMod, W, exec, firefox
 bind = $mainMod, M, exec, LD_PRELOAD=/usr/lib/spotifywm.so /usr/share/spotify/spotify-launcher
 bind = $mainMod, B, exec, eww reload
 bind = $mainMod, C, killactive,
-bind = SUPER_SHIFT, M, exit,
+bind = $mainModShift, M, exit,
 bind = $mainMod, E, exec, thunar
 bind = $mainMod, V, togglefloating, 
 bind = $mainMod, P, pseudo, # dwindle
