added screenshot script and corresponding keybind

--- a/main/hypr/hyprland.conf
+++ b/main/hypr/hyprland.conf
@@ -86,6 +86,8 @@ bind = $mainMod, V, togglefloating,
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, S, togglesplit, # dwindle
 
+bind = $mainModShift, S, exec, screenshot.sh # screenshot script using grim and slurp
+
 # special keys keybinds
 binde = , XF86AudioLowerVolume, exec, pactl set-sink-volume @DEFAULT_SINK@ -5%
 binde = , XF86AudioRaiseVolume, exec, pactl set-sink-volume @DEFAULT_SINK@ +5%
