fixed json concealing in nvim, basic config for waybar, default config for pipewire

--- a/main/hypr/hyprland.conf
+++ b/main/hypr/hyprland.conf
@@ -78,7 +78,8 @@ bind = $mainMod, Q, exec, alacritty # terminal emulator (default)
 bind = $mainModShift, Q, exec, kitty # terminal emulator (secondary)
 bind = $mainMod, W, exec, firefox
 bind = $mainMod, M, exec, LD_PRELOAD=/usr/lib/spotifywm.so /usr/share/spotify/spotify-launcher
-bind = $mainMod, B, exec, eww reload
+bind = $mainMod, B, exec, killall waybar && waybar
+bind = $mainModShift, B, exec, eww reload
 bind = $mainMod, C, killactive,
 bind = $mainModShift, M, exit,
 bind = $mainMod, E, exec, thunar
