--- a/main/waybar/config.jsonc
+++ b/main/waybar/config.jsonc
@@ -2,10 +2,13 @@
   "layer": "top", // Waybar at top layer
   "position": "top", // Waybar position (top|bottom|left|right)
   "height": 30, // Waybar height (to be removed for auto height)
-  "spacing": 4, // Gaps between modules (4px)
+  "spacing": 10, // Gaps between modules (4px)
+  "margin-top": 10,
+  "margin-left": 10,
+  "margin-right": 10,
   // Choose the order of the modules
-  "modules-left": ["wlr/workspaces"],
-  "modules-center": ["clock"],
+  "modules-left": ["clock"],
+  "modules-center": ["wlr/workspaces"],
   "modules-right": [
     "mpd",
     "pulseaudio",
