fixed volume control and added EDITOR env variable

--- a/main/hypr/hyprland.conf
+++ b/main/hypr/hyprland.conf
@@ -90,8 +90,8 @@ bind = $mainMod, S, togglesplit, # dwindle
 bind = $mainModShift, S, exec, screenshot.sh # screenshot script using grim and slurp
 
 # special keys keybinds
-binde = , XF86AudioLowerVolume, exec, pactl set-sink-volume @DEFAULT_SINK@ -5%
-binde = , XF86AudioRaiseVolume, exec, pactl set-sink-volume @DEFAULT_SINK@ +5%
+binde = , XF86AudioLowerVolume, exec, pulsemixer --change-volume -5
+binde = , XF86AudioRaiseVolume, exec, pulsemixer --change-volume +5 --max-volume 100
 bind = , XF86AudioMute, exec, pactl set-sink-mute @DEFAULT_SINK@ toggle
 bind = , XF86AudioPlay, exec, playerctl play-pause
 bind = , XF86AudioPrev, exec, playerctl previous
