added sql formatter for null-ls and LO07 directory to httpd config file

--- a/special/httpd_conf/httpd.conf
+++ b/special/httpd_conf/httpd.conf
@@ -263,6 +263,11 @@ DocumentRoot "/opt/lampp/htdocs"
     AllowOverride All
     Require all granted
 </Directory>
+<Directory "/home/raphaelw/Documents/LO07">
+    Options Indexes FollowSymLinks ExecCGI Includes
+    AllowOverride All
+    Require all granted
+</Directory>
 
 #
 # DirectoryIndex: sets the file that Apache will serve if a directory
@@ -356,6 +361,7 @@ LogLevel warn
     #
     ScriptAlias /cgi-bin/ "/opt/lampp/cgi-bin/"
     Alias /TurboMail /home/raphaelw/Projects/TurboMail/src
+    Alias /LO07 /home/raphaelw/Documents/LO07
 </IfModule>
 
 <IfModule cgid_module>
