moved some startup commands and changed status bar from eww to waybar (on startup)

--- a/laptop/hypr/hyprhost.conf
+++ b/laptop/hypr/hyprhost.conf
@@ -6,14 +6,8 @@
 monitor = eDP-1, 1920x1080@60, 0x0, 1
 
 #############################
-# Execute on startup
+# Execute on startup (host)
 #############################
-
-exec-once = hyprpaper # wallpaper
-exec-once = eww daemon # start eww daemon
-exec-once = eww open bar # top status bar
-exec-once = dunst # notification-daemon
-exec-once = /usr/lib/polkit-kde-authentication-agent-1 # authentication agent
 
 exec-once = [workspace 1 silent] firefox
 exec-once = [workspace 2 silent] alacritty #workspace 2
@@ -23,7 +17,6 @@ exec-once = [workspace 4 silent] thunderbird #workspace 4 - email client
 exec-once = [workspace 5 silent] keepassxc #workspace 5 - password manager
 exec-once = spotify # spotify, see window rules below
 
-exec-once = hyprctl dispatch workspace 10
 
 #############################
 # Input Settings / Devices
