--- a/main/hypr/hyprland.conf
+++ b/main/hypr/hyprland.conf
@@ -11,6 +11,17 @@ source = ~/.config/hypr/hyprhost.conf
 monitor=,preferred,auto,1,mirror,eDP-1
 
 #############################
+# Execute on startup
+#############################
+
+exec-once = hyprpaper # wallpaper
+exec-once = waybar # top status bar
+exec-once = dunst # notification-daemon
+exec-once = /usr/lib/polkit-kde-authentication-agent-1 # authentication agent
+
+exec-once = hyprctl dispatch workspace 10
+
+#############################
 # Appearance / Animations
 #############################
 
