--- a/desktop/hypr/hyprhost.conf
+++ b/desktop/hypr/hyprhost.conf
@@ -6,14 +6,8 @@
 monitor= DP-3, 3440x1440@165, 0x0, 1
 
 #############################
-# Execute on startup
+# Execute on startup (host)
 #############################
-
-exec-once = hyprpaper # wallpaper
-exec-once = eww daemon # start eww daemon
-exec-once = eww open bar # top status bar
-exec-once = dunst # notification-daemon
-exec-once = /usr/lib/polkit-kde-authentication-agent-1 # authentication agent
 
 exec-once = [workspace 1 silent] firefox
 exec-once = [workspace 2 silent] alacritty
@@ -22,8 +16,6 @@ exec-once = [workspace 3 silent] alacritty
 exec-once = [workspace 4 silent] thunderbird
 exec-once = [workspace 4 silent] keepassxc 
 exec-once = spotify # spotify, see window rules below
-
-exec-once = hyprctl dispatch workspace 10
 
 #############################
 # Input Settings / Devices
